
Added / Fixed / changed for 2.1.0
-----------------------
# This release focuses on new calendar & forms modules, e-Commerce as OOTB experience, integration of jQuery/Twitter Bootstrap
  - adds optional nested comments, and optional per-item comment disabling
  - adds optional comments to filedownload module items
  - removes extra themes to reduce size of package, available as separate addon downloads
  - adds better version change information to initial upgrade page
  - adds optional color/style to categories
  - upgrades calendar to a 2.0 event controller with categories & tags
    -- converts existing calendars
    -- adds color-coded categories and tags
    -- add color-coded aggregation of external Google & iCal calendars, and online event registrations
  - adds new 'mega-menu' navigation view with new free-form page/menu type for embedding modules
  - adds random sorting/sequence to photo album/slideshows
  - adds new built-in database manager
  - plus many, many other tweaks, fixes, and features

Added / Fixed / changed for 2.0.9
-----------------------
# This release focuses on greater HTML5 & PHP v5.4 compliance, & module upgrades
  - upgrades old school simple poll and navigation modules into 2.0 style controllers
    -- page type indicators now displayed in Manage Pages view
    -- new universal navigation view to emulate most old navigation views through user settings
    -- initial implementation of optional menu item icons
  - adds help links to most admin displays
  - adds next/prev item in blog and news single item view
  - adds optional 'date badge' to news, blog, & filedownload views
  - calendar is more forgiving of timezone changes (events won't disappear)
    -- adds selectable weekly view to calendar
    -- updates ical feeds and send reminders cron task to use sef urls
  - adds new 2-column style display option in forms module
  - updates rss feeds to use sef urls, adds individual feed 'advertise' option